<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/common_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/layout_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_item_list"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/layout_image"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_doctor"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:text="@string/r_doctor"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/big_font_size" />

            <TextView
                android:id="@+id/tv_hospital"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:text="@string/r_hospital"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/middle_font_size" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:text="@string/r_patient"
                android:textColor="@color/common_text1"
                android:textSize="@dimen/middle_font_size" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:text="@string/r_time"
                android:textColor="@color/common_text1"
                android:textSize="@dimen/middle_font_size" />

            <TextView
                android:id="@+id/tv_password"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:text="@string/r_pwd"
                android:textColor="@color/common_text1"
                android:textSize="@dimen/middle_font_size" />

            <TextView
                android:id="@+id/tv_charge"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:text="@string/r_money"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/middle_font_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/tv_face"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="fitXY"
                android:src="@color/common_bg" />

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_btn_registry"
                android:text="@string/r_cancel_register"
                android:textColor="@color/text_btn_registry"
                android:textSize="@dimen/middle_font_size" />
        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/common_stroke" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="5dp"
        android:background="@color/common_stroke" />
</LinearLayout>